[fix] use z-index manager for alerts

--- a/src/styles/alerter.styl
+++ b/src/styles/alerter.styl
@@ -4,9 +4,7 @@
     @extends $alerts
 
     .coz-overlay
-        // Specify z-index to bypass upload button z-index
-        z-index 59
-
     .coz-alert
         // Specify z-index to bypass upload button z-index
-        z-index 100
+        z-index $modal-index
+
